; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_ext_secp256k1.c_hc_secp256k1_pubkey_parse.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_ext_secp256k1.c_hc_secp256k1_pubkey_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SECP256K1_CONTEXT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hc_secp256k1_pubkey_parse(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32, i32* @SECP256K1_CONTEXT_NONE, align 4
  %10 = call i32* @secp256k1_context_create(i32 %9)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i64 @secp256k1_ec_pubkey_parse(i32* %11, i32* %12, i32* %13, i64 %14)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @secp256k1_context_destroy(i32* %18)
  store i32 0, i32* %4, align 4
  br label %23

20:                                               ; preds = %3
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @secp256k1_context_destroy(i32* %21)
  store i32 1, i32* %4, align 4
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32* @secp256k1_context_create(i32) #1

declare dso_local i64 @secp256k1_ec_pubkey_parse(i32*, i32*, i32*, i64) #1

declare dso_local i32 @secp256k1_context_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
